# xapian-glib

./: .gitignore  Makefile.am  README.md  autogen.sh  configure  configure.ac  meson.build  meson_options.txt  segfault.js
debian/: changelog  control  copyright  gir1.2-xapian-1.0.install  gir1.2-xapian-2.0.install  libxapian-glib-1.0-0.install  libxapian-glib-1.0-dev.install  libxapian-glib-2.0-0.install  libxapian-glib-2.0-dev.install  rules
doc/: .gitignore  Makefile.am  meson.build  xapian-glib-docs.xml  xapian-glib-sections.txt  xapian-glib.types  xapian-glib2-sections.txt
docs/: XapianDatabase.html  XapianDocument.html  XapianEnquire.html  XapianMSet.html  XapianMSetIterator.html  XapianPostingSource.html  XapianQuery.html  XapianQueryParser.html  XapianSimpleStopper.html  XapianStem.html  XapianStopper.html  XapianTermGenerator.html  XapianTermIterator.html  XapianValuePostingSource.html  XapianValueWeightPostingSource.html  XapianWritableDatabase.html  annotation-glossary.html  api-index-full.html  ch01.html  index.html  object-tree.html  xapian-glib-Utilities.html  xapian-glib.devhelp2
examples/: .gitignore  Makefile.am  meson.build  simplesearch-pagerank.js  simplesearch.c  simplesearch.js  simplestopper.c
examples/pagerankdb/: iamchert  position.DB  position.baseB  postlist.DB  postlist.baseB  record.DB  record.baseB  spelling.baseB  termlist.DB  termlist.baseB
examples/testdb/: iamchert  position.DB  position.baseB  postlist.DB  postlist.baseA  postlist.baseB  record.baseA  record.baseB  termlist.baseA  termlist.baseB
testdb/: position.baseA  record.DB  termlist.DB
xapian-glib/: Makefile.am  meson.build  xapian-database-private.h  xapian-database.cc  xapian-database.h  xapian-document-private.h  xapian-document.cc  xapian-document.h  xapian-enquire.cc  xapian-enquire.h  xapian-enums.cc  xapian-enums.h  xapian-error-private.h  xapian-error.cc  xapian-glib-macros.h  xapian-glib-types.h  xapian-glib-version.h.in  xapian-glib.h  xapian-glib.pc.in  xapian-mset-iterator.cc  xapian-mset-private.h  xapian-mset.cc  xapian-mset.h  xapian-posting-source-private.h  xapian-posting-source.cc  xapian-posting-source.h  xapian-private.h  xapian-query-parser.cc  xapian-query-parser.h  xapian-query-private.h  xapian-query.cc  xapian-query.h  xapian-simple-stopper.cc  xapian-simple-stopper.h  xapian-stem-private.h  xapian-stem.cc  xapian-stem.h  xapian-stopper-private.h  xapian-stopper.cc  xapian-stopper.h  (+14 more)
xapian-glib/tests/: .gitignore  Makefile.am  database.c  document.c  meson.build  query-parser.c  query.c  sortable-serialise.c  stem.c  writable-database.c
